--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
               alt="شعار مؤسسة التخطيط الاستراتيجي - مبنى حديث بتصميم عصري بألوان زرقاء وبيضاء تعبر عن الاحترافية والثقة"
               class="w-12 h-12 rounded-lg ml-3"
             />
-            <h1 class="text-xl font-bold">مؤسسة ESM للاستثمار</h1>
+            <a href="#hero"
+              ><h1 class="text-xl font-bold">مؤسسة ESM للاستثمار</h1></a
+            >
           </div>
           <div class="hidden md:flex space-x-9">
             <a href="#services" class="hover:text-blue-500 transition ml-7"
@@ -72,7 +74,8 @@
 
     <!-- Hero Section -->
     <section
-      class="bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-gray-100 via-gray-200 to-gray-400 text-black py-20 rounded-lg"
+      id="hero"
+      class="bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-gray-100 via-gray-200 to-gray-400 text-black py-20 pt-[160px] rounded-lg"
     >
       <div class="container mx-auto px-6 text-center">
         <h2 class="text-4xl md:text-5xl font-bold mb-6">
