--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel="shortcut icon" type="x-icon" href="ESM.jpg" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <title>مؤسسة ESM للاستثمار</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
@@ -34,6 +36,21 @@
         gap: 40px;
         align-items: center;
       }
+      .hero{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./Imgs/HomePage.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+      }
+      .hero p{
+        margin:  3%;
+      }
+      @media(max-width:769px){
+        .hero p{
+          margin: 3% -2%;
+          padding: 0 20px;
+        }
+      }
     </style>
   </head>
   <body class="bg-gray-50">
@@ -43,7 +60,7 @@
         <div class="flex justify-between items-center text-black">
           <div class="flex items-center space-x-4">
             <img
-              src="ESM.jpg"
+              src="./Imgs/ESM.jpg"
               alt="شعار مؤسسة التخطيط الاستراتيجي - مبنى حديث بتصميم عصري بألوان زرقاء وبيضاء تعبر عن الاحترافية والثقة"
               class="w-12 h-12 rounded-lg ml-3"
             />
@@ -75,14 +92,15 @@
     <!-- Hero Section -->
     <section
       id="hero"
-      class="bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-gray-100 via-gray-200 to-gray-400 text-black py-20 pt-[160px] rounded-lg"
+      class="hero py-20 pt-[160px] "
     >
+    <!-- bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-gray-100 via-gray-200 to-gray-400 text-black py-20 pt-[160px] rounded-lg -->
       <div class="container mx-auto px-6 text-center">
-        <h2 class="text-4xl md:text-5xl font-bold mb-6">
+        <h2 class="text-3xl md:text-5xl font-bold mb-6 text-gray-50">
           شريكك الأمثل للاستثمار الناجح في المملكة العربية السعودية
         </h2>
-        <p class="text-xl mb-8">
-          نقدم لك دراسات الجدوى والاستشارات المتخصصة لضمان نجاح مشروعك في عدة
+        <p class="md:text-2xl text-lg mb-8 text-gray-100 tracking-widest md:w-[900px]  ">
+          نقدم لك دراسات الجدوى والاستشارات المتخصصة لضمان نجاح مشروعك في عدة 
           قطاعات, كالقطاع الصناعي او التجاري او الخدمي.
         </p>
         <button
@@ -109,7 +127,7 @@
             >
               <span class="text-2xl">🏢</span>
             </div>
-            <h3 class="text-xl font-semibold mb-4">
+            <h3 class="text-xl font-semibold mb-4 ">
               تأسيس الشركات المحلية والأجنبية
             </h3>
             <p class="text-gray-600">داخل المملكة بجميع الإجراءات القانونية</p>
@@ -216,7 +234,7 @@
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div>
             <img
-              src="esm photo1.jpg"
+              src="./Imgs/esm photo1.jpg"
               alt="فريق عمل احترافي في اجتماع عمل داخل مكتب عصري بألوان هادئة، يظهر التعاون والاحترافية في بيئة العمل"
               class="rounded-x1 shadow-lg w-full"
             />
@@ -308,7 +326,7 @@
           </div>
           <div>
             <img
-              src="vision.jpg"
+              src="./Imgs/vision.jpg"
               alt="فريق عمل احترافي في اجتماع عمل داخل مكتب عصري بألوان هادئة، يظهر التعاون والاحترافية في بيئة العمل"
               class="rounded-x1 w-full"
             />
@@ -355,7 +373,7 @@
             "
           >
             <img
-              src="our values 1.png"
+              src="./Imgs/our values 1.png"
               alt="Innovation"
               style="
                 width: 70px;
@@ -403,7 +421,7 @@
             "
           >
             <img
-              src="commitment.png"
+              src="./Imgs/commitment.png"
               alt="Commitment"
               style="
                 width: 70px;
@@ -452,7 +470,7 @@
             "
           >
             <img
-              src="partnership.png"
+              src="./Imgs/partnership.png"
               alt="Partnership"
               style="
                 width: 70px;
@@ -500,7 +518,7 @@
             "
           >
             <img
-              src="excellence.png"
+              src="./Imgs/excellence.png"
               alt="Excellence"
               style="
                 width: 70px;
@@ -548,7 +566,7 @@
             "
           >
             <img
-              src="integrity.png"
+              src="./Imgs/integrity.png"
               alt="Integrity"
               style="
                 width: 70px;
@@ -614,20 +632,36 @@
           <br />
         </h2>
         <div class="w-full">
-          <img src="consulting.png" alt="" />
+          <img src="./Imgs/consulting.png" alt="" />
         </div>
       </div>
     </section>
 
+    <!-- vide section -->
+<section class="my-5 mx-3">
+  <!-- Title & description -->
+    <div class="my-3 text-center">
+      <h1 class="title p-2 text-gray-600 font-bold md:text-2xl text-xl">
+        اكتشف فرصًا استثمارية فريدة مع ESM
+      </h1>
+      <p class="text-gray-400 text-lg md:text-xl p-2">
+        سواء كنت مستثمرًا جديدًا تبحث عن بداية آمنة، أو محترفًا تسعى لتوسيع محفظتك، فإن فريقنا من الخبراء جاهز ليقدم لك الدعم والتوجيه اللازمين
+      </p>
+    </div>
+  <div class="space-y-3 md:mx-5">
+    <video src="./Imgs/Company-Video.mp4" controls class="video" aria-colspan="md:w-[500px] h-[500px]"></video>
+  </div>
+</section>
+
     <!-- Pricing Section -->
     <section id="pricing" class="py-20 bg-gray-50">
-      <div class="container mx-auto px-6">
+      <div class=" mx-auto px-6">
         <h2 class="text-3xl font-bold text-center mb-16 text-gray-800">
           باقات دراسات الجدوى
         </h2>
         <div class="grid md:grid-cols-4 gap-8">
           <div
-            class="pricing-card bg-white border border-green-200 p-8 rounded-xl text-center"
+            class="pricing-card bg-white border border-green-200 p-8 rounded-xl text-center md:w-[280px] md:mx-1"
           >
             <div
               class="bg-green-100 text-green-800 px-4 py-2 rounded-full text-sm font-semibold mb-4"
@@ -650,7 +684,7 @@
             </button>
           </div>
           <div
-            class="pricing-card bg-white border border-gray-200 p-8 rounded-xl text-center"
+            class="pricing-card bg-white border border-gray-200 p-8 rounded-xl text-center md:w-[280px] md:mx-1"
           >
             <h3 class="text-xl font-semibold mb-4">الباقة الأساسية</h3>
             <div class="text-3xl font-bold text-gray-600 mb-6">1,499 ر.س</div>
@@ -668,7 +702,7 @@
             </button>
           </div>
           <div
-            class="pricing-card premium-card p-8 rounded-xl text-center relative"
+            class="pricing-card bg-gray-800 border border-green-200 p-8  rounded-xl text-center md:w-[280px] md:mx-1"
           >
             <div
               class="absolute top-0 right-0 bg-yellow-400 text-blue-900 px-4 py-1 rounded-bl-lg"
@@ -692,7 +726,7 @@
             </button>
           </div>
           <div
-            class="pricing-card bg-white border border-gray-200 p-8 rounded-xl text-center"
+            class="pricing-card bg-white border border-green-200 p-8 rounded-xl text-center md:w-[280px] md:mx-1"
           >
             <h3 class="text-xl font-semibold mb-4">الباقة المتميزة</h3>
             <div class="text-3xl font-bold text-gray-600 mb-6">4,999 ر.س</div>
@@ -825,7 +859,7 @@
           </div>
           <div>
             <img
-              src="why-us.png"
+              src="./Imgs/why-us.png"
               alt="فريق عمل احترافي في اجتماع عمل داخل مكتب عصري بألوان هادئة، يظهر التعاون والاحترافية في بيئة العمل"
               class="rounded-xl shadow-lg"
             />
@@ -908,7 +942,7 @@
           <div>
             <div class="flex items-center mb-4">
               <img
-                src="ESM.jpg"
+                src="./Imgs/ESM.jpg"
                 alt="شعار مؤسسة التخطيط الاستراتيجي - مبنى حديث بتصميم عصري بألوان زرقاء وبيضاء تعبر عن الاحترافية والثقة"
                 class="w-12 h-12 rounded-lg ml-3"
               />
@@ -938,11 +972,12 @@
             </ul>
           </div>
           <div>
-            <h4 class="font-semibold mb-4">تابعنا</h4>
-            <div class="flex space-x-4">
-              <a href="#" class="text-gray-400 hover:text-white">Twitter</a>
-              <a href="#" class="text-gray-400 hover:text-white">LinkedIn</a>
-              <a href="#" class="text-gray-400 hover:text-white">Instagram</a>
+            <h4 class="font-semibold mb-4">تابعنا على</h4>
+            <div class="flex flex-row space-x-2 align-items-center gap-2 ">
+              <a href="#" class="text-gray-400 bg-gray-200 text-lg  py-1 w-[34px] h[20px] text-center  rounded-full hover:text-gray-600 mx-2 d-inline-block"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#" class="text-gray-400 bg-gray-200 text-lg  py-1 w-[34px] h[20px] text-center  rounded-full hover:text-gray-600"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#" class="text-gray-400 bg-gray-200 text-lg  py-1 w-[34px] h[20px] text-center  rounded-full hover:text-gray-600"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#" class="text-gray-400 bg-gray-200 text-lg  py-1 w-[34px] h[20px] text-center  rounded-full hover:text-gray-600 mx-2"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
         </div>
