--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
+    <!-- Font awsome Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="shortcut icon" type="x-icon" href="ESM.jpg" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,7 +42,6 @@
         border-left: transparent;
         border-radius: 20px;
         margin-bottom: 10px;
-        margin-top: 10px;
       }
 
       /* Vision Section */
@@ -970,10 +977,13 @@
           </div>
           <div>
             <h4 class="font-semibold mb-4">تابعنا</h4>
-            <div class="flex space-x-4">
-              <a href="#" class="text-gray-400 hover:text-white">Twitter</a>
-              <a href="#" class="text-gray-400 hover:text-white">LinkedIn</a>
-              <a href="#" class="text-gray-400 hover:text-white">Instagram</a>
+            <div class="flex gap-3">
+              <a href="#" class="text-gray-400 hover:text-white"
+                ><i class="fa-brands fa-tiktok"></i
+              ></a>
+              <a href="#" class="text-gray-400 hover:text-white"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
             </div>
           </div>
         </div>
