added language botton and fix some bugs

--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
             <a href="#contact" class="hover:text-blue-500 transition"
               >اتصل بنا</a
             >
+            <a href="#contact" style="visibility: hidden">hidden</a>
+            <div class="selectLan">
+              اختر اللغة
+              <div class="lan">
+                <a href="index.html">Arabic ( عربي )</a>
+                <a href="indexEng.html">English</a>
+              </div>
+            </div>
           </div>
         </div>
       </nav>
@@ -978,10 +986,16 @@
           <div>
             <h4 class="font-semibold mb-4">تابعنا</h4>
             <div class="flex gap-3">
-              <a href="#" class="text-gray-400 hover:text-white"
+              <a
+                href="https://www.tiktok.com/@est25.co?lang=en"
+                target="_blank"
+                class="text-gray-400 hover:text-white"
                 ><i class="fa-brands fa-tiktok"></i
               ></a>
-              <a href="#" class="text-gray-400 hover:text-white"
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="text-gray-400 hover:text-white"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
             </div>
